--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,14 @@
 /dist
 /node_modules
 
-.env
+# production
+/frontend/build/
+
+/backend/config/config.env
+/frontend/.env.local
+/frontend/.env.development.local
+/frontend/.env.test.local
+/frontend/.env.production.local
+
 upload
 package-lock.json
