--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -3,6 +3,7 @@ NODE_ENV = DEVELOPMENT
 FRONTEND_URL = "http://localhost:3000"
 
 DB_LOCAL_URI = mongodb://192.168.109.159:27017/shopit
+DB_URI = mongodb+srv://godtyche124:deadras1113@cluster0.ntdbbz2.mongodb.net/shopit?retryWrites=true&w=majority
 
 JWT_SECRET = ASDFJIE234I9FEJWIJFWEIJI3O4I32WOFI
 JWT_EXPIRES_TIME = 7d
