--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "description": "full ecommerce",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js",
+    "start": "SET node backend/server.js",
     "dev": "SET NODE_ENV=DEVELOPMENT& nodemon backend/server",
     "prod": "SET NODE_ENV=PRODUCTION& nodemon backend/server",
-    "seeder": "node backend/utils/seeder.js"
+    "seeder": "node backend/utils/seeder.js",
+    "heroku:postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm build --prefix frontend"
   },
   "author": "Dennis Stanely",
   "license": "ISC",
